--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
       <title>your mum</title>
       <div style="margin: 0 auto;"> fuck you echo </div>
+        
+        <meta property="og:title" content="Fuck you echo">
+        <meta property="og:description" content="fuck you echo">
     <head>
     <body>
     </body>
