--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
     <head>
       <title>your mum</title>
-      <div style="margin: 0 auto;"> fuck you echo </div>
+      <div style="margin: 0, auto; font-size: 70px;">fuck you echo</div>
         <meta property="og:title" content="Fuck you echo">
     <head>
     <body>
