--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
     <html>
     <head>
       <title>your mum</title>
+      <style>
+          #text {
+          color:black;
+          font-size:1000px;
+          
+          }
         <meta property="og:title" content="Fuck you echo">
-    <head>
+         <marquee id="text">fuck you echo</marquee>
+    </head>
     <body>
-              <div style="margin: 0, auto; font-size: 1000px;">fuck you echo</div>
     </body>
     </html>
