--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>your mum</title>
         <meta property="og:title" content="Fuck you echo">
     </head>
-    <body>
+    <body style="background-color:gray;">
         <div style="margin: 0, auto; font-size: 450px;">fuck you echo</div>
     </body>
     </html>
