--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         color: green;
     }
     </style>
+ 
+    <style1>
+     p {
+     background-image: url('troll.png');
+     }
   
     <script src=
 "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
