--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     p, h1 {
         color: green;
     }
+     
+     body {
+     background-image: url:('troll.png');
+     }
     </style>
  
-    <style1>
-     p {
-     background-image: url('troll.png');
-     }
-  
     <script src=
 "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
