--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     $.getJSON("https://api.ipify.org?format=json", function(data) {
          
         // Setting text of element P with id gfg
-        $("#fuck you").html(data.ip);
+        $("#gfg").html(data.ip);
     })
     </script>
 </head>
@@ -33,7 +33,7 @@
     <center>
         <h1>Fuck you</h1>
         <h3>Your ip:</h3>
-        <p id="fuck you"></p>
+        <p id="gfg"></p>
  
     </center>
 </body>
