--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
-<Doctype HTML>
-    <html>
-    <head>
-      <title>your mum</title>
-        <meta property="og:title" content="Fuck you echo">
-    </head>
-    <body style="background-color:gray;">
-        <div style="margin: 0, auto; font-size: 450px;">fuck you echo</div>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>your mum</title>
+  <meta property="og:title" content="Fuck you echo">
+</head>
+<style>
+  #troll {
+    font-size: 70px;
+    width: fit-content;
+    color: white;
+  }
+  body {
+    background-color: black;
+  }
+</style>
+<body>
+  <div id="troll">fuck you echo</div>
+  <meta property="og:title" content="Fuck you echo">
+</body>
+<script>
+const section = document.body;
+const text = document.getElementById("troll");
+const FPS = 60;
+const colors = ['red', 'ping', 'blue', 'orange', 'white', 'hotpink', 'green', 'yellow']
+section.style.height = window.innerHeight + "px";
+section.style.width = window.innerWidth + "px";
+
+let xPosition = 10;
+let yPosition = 10;
+let xSpeed = 4;
+let ySpeed = 4;
+text.style.transition = `transform ${FPS}ms linear, color 1000ms linear`;
+function update() {
+  text.style.transform = `translateX(${xPosition}px) translateY(${yPosition}px)`
+}
+
+setInterval(() => {
+  if (xPosition + text.clientWidth >= window.innerWidth || xPosition <= 0) {
+    xSpeed = -xSpeed;
+  }
+  if (yPosition + text.clientHeight >= window.innerHeight || yPosition <= 0) {
+    ySpeed = -ySpeed;
+  }
+  text.style.color = colors[parseInt(Math.random() * ((colors.length - 1) - 1) + 1)];
+  xPosition += xSpeed;
+  yPosition += ySpeed;
+  update();
+}, 1000 / FPS);
+
+window.addEventListener("resize", () => {
+  xPosition = 10;
+  yPosition = 10;
+
+  section.style.height = window.innerHeight + "px";
+  section.style.width = window.innerWidth + "px";
+});
+
+
+</script>
+</html>% 
