--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>your mum</title>
   <meta property="og:title" content="Fuck you echo">
+  <meta name="og:image" itemprop="image" content="troll.png">
 </head>
 <style>
   #troll {
