--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>your mum</title>
-  <meta property="og:title" content="Fuck you echo">
+  <meta property="og:title" content="I like echo">
   <meta name="og:image" itemprop="image" content="troll.png">
 </head>
 <style>
@@ -19,7 +19,7 @@
   }
 </style>
 <body>
-  <div id="troll">fuck you echo</div>
+  <div id="troll">I like echo</div>
 </body>
 <script>
 const section = document.body;
